# django-mysql-uuid

./: .gitignore  LICENSE  README.md  django_mysql_uuid.py  pyproject.toml
tests/: models.py  my.cnf  settings.py  test_simple.py
tests/migrations/: 0001_initial.py  0002_useremail_guid.py  0003_alter_useremail_guid.py
